# Ucode-Sprint00

./: README.md
osmyrnov/t00/: CMakeLists.txt  helloTamriel.cpp
osmyrnov/t01/: printDialog.cpp  printDialog.h
osmyrnov/t02/: CMakeLists.txt  walletManager.cpp  walletManager.h
osmyrnov/t03/: castSpells.cpp
osmyrnov/t04/: referenceOrPointer.cpp
osmyrnov/t05/: CMakeLists.txt  main.cpp
osmyrnov/t06/: CMakeLists.txt  main.cpp  meadSong.cpp  meadSong.h
osmyrnov/t07/: CMakeLists.txt
osmyrnov/t07/src/: CMakeLists.txt
